--- a/index.html
+++ b/index.html
@@ -2,85 +2,197 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Prueba Botón Continuar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro Institucional</title>
   <style>
     body {
-      background-color: #005fa3;
-      color: white;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #005fa3;
     }
 
     .seccion {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 20px;
+      text-align: center;
+      background-image: url('marca-agua.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 300px;
+      background-blend-mode: lighten;
+      background-color: #005fa3;
+    }
+
+    .hidden {
       display: none;
-      padding: 40px;
-      text-align: center;
     }
 
-    .visible {
-      display: block;
-    }
-
-    input, button {
-      margin: 10px;
+    input, select, textarea, button {
+      margin: 10px 0;
       padding: 10px;
+      width: 90%;
+      max-width: 500px;
       font-size: 16px;
+      box-sizing: border-box;
     }
 
-    .marca-agua {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      text-align: center;
-      font-size: 11px;
+    textarea {
+      height: 120px;
+      resize: vertical;
+    }
+
+    button {
+      background-color: #ffffff;
+      color: #005fa3;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #e0e0e0;
+    }
+
+    h1, h2, p, label {
       color: white;
-      opacity: 0.3;
-      font-style: italic;
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
 
-  <div class="marca-agua">
-    Propiedad y diseño de Jesús Sánchez C. con la colaboración de Microsoft Copilot
-  </div>
-
-  <div id="caratula" class="seccion visible">
+  <!-- Carátula -->
+  <div id="caratula" class="seccion">
+    <img src="LOGO-INSTITUCIONAL.png" alt="Logo" class="logo">
     <h1>Inicio de Jornada</h1>
     <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
     <button onclick="iniciarJornada()">Continuar</button>
   </div>
 
-  <div id="formulario" class="seccion">
-    <h2>Formulario visible</h2>
-    <input type="text" id="telefonista" readonly>
-    <input type="date" id="fecha">
-    <input type="time" id="hora">
+  <!-- Bienvenida -->
+  <div id="bienvenida" class="seccion hidden">
+    <h2 id="mensajeBienvenida"></h2>
   </div>
 
+  <!-- Formulario -->
+  <div id="formulario" class="seccion hidden">
+    <h2>Registro de Servicio</h2>
+    <input type="text" id="folio" readonly>
+    <input type="date" id="fecha">
+    <input type="time" id="hora">
+    <input type="text" id="telefonista" readonly>
+    <input type="text" id="direccion" placeholder="Dirección del servicio">
+    <input type="text" id="destino" placeholder="Destino">
+    <input type="text" id="asignado" placeholder="Asignado a">
+    <select id="tipoServicio">
+      <option value="">Selecciona tipo de servicio</option>
+      <option value="Normal">Normal</option>
+      <option value="Por tiempo">Por tiempo</option>
+      <option value="Carro rotulado">Carro rotulado</option>
+      <option value="Mensajería">Mensajería</option>
+      <option value="Paquetería">Paquetería</option>
+      <option value="Mensajería compras">Mensajería compras</option>
+      <option value="Carro sin rotular">Carro sin rotular</option>
+      <option value="2 carros">2 carros</option>
+      <option value="Guía">Guía</option>
+      <option value="Cambio de llanta">Cambio de llanta</option>
+      <option value="Pasar corriente">Pasar corriente</option>
+      <option value="Transporte de mascota">Transporte de mascota</option>
+    </select>
+    <textarea id="observaciones" placeholder="Observaciones"></textarea>
+    <button onclick="guardarDatos()">Guardar</button>
+    <button onclick="copiarComoImagen()">Copiar como imagen</button>
+    <button onclick="cerrarTurno()">Cerrar turno</button>
+  </div>
+
+  <!-- Despedida -->
+  <div id="despedida" class="seccion hidden">
+    <h2>¡Gracias por tu servicio hoy!</h2>
+    <p>Tu jornada ha sido registrada correctamente.</p>
+  </div>
+
+  <!-- Script -->
   <script>
-    function mostrar(id) {
-      document.querySelectorAll(".seccion").forEach(s => s.classList.remove("visible"));
-      document.getElementById(id).classList.add("visible");
+    let folioContador = 1;
+    let nombreUsuario = "";
+
+    function generarFolio() {
+      const fecha = new Date();
+      const año = fecha.getFullYear();
+      return `${folioContador}/${año.toString().slice(-2)}`;
     }
 
     function iniciarJornada() {
-      const nombre = document.getElementById("nombreUsuario").value.trim();
+      const nombre = document.getElementById('nombreUsuario').value.trim();
       if (nombre === "") {
         alert("Por favor ingresa tu nombre.");
         return;
       }
 
-      const ahora = new Date();
-      const fecha = ahora.toISOString().split("T")[0];
-      const hora = ahora.toTimeString().slice(0,5);
+      nombreUsuario = nombre;
+      document.getElementById('caratula').classList.add('hidden');
+      document.getElementById('mensajeBienvenida').textContent = `${nombreUsuario}, gracias por tu compromiso. ¡Vamos a dar lo mejor hoy!`;
+      document.getElementById('bienvenida').classList.remove('hidden');
 
-      document.getElementById("telefonista").value = nombre;
-      document.getElementById("fecha").value = fecha;
-      document.getElementById("hora").value = hora;
+      setTimeout(() => {
+        document.getElementById('bienvenida').classList.add('hidden');
+        document.getElementById('formulario').classList.remove('hidden');
 
-      mostrar("formulario");
+        document.getElementById('folio').value = generarFolio();
+        document.getElementById('fecha').valueAsDate = new Date();
+        document.getElementById('hora').value = new Date().toTimeString().slice(0,5);
+        document.getElementById('telefonista').value = nombreUsuario;
+      }, 4000);
+    }
+
+    function guardarDatos() {
+      const campos = [
+        { id: 'direccion', nombre: 'Dirección' },
+        { id: 'destino', nombre: 'Destino' },
+        { id: 'asignado', nombre: 'Asignado a' },
+        { id: 'tipoServicio', nombre: 'Tipo de servicio' }
+      ];
+
+      let faltantes = campos.filter(c => document.getElementById(c.id).value.trim() === "");
+
+      if (faltantes.length > 0) {
+        alert("Faltan campos obligatorios:\n" + faltantes.map(f => `- ${f.nombre}`).join("\n"));
+        return;
+      }
+
+      const datos = {
+        folio: document.getElementById('folio').value,
+        fecha: document.getElementById('fecha').value,
+        hora: document.getElementById('hora').value,
+        telefonista: document.getElementById('telefonista').value,
+        direccion: document.getElementById('direccion').value,
+        destino: document.getElementById('destino').value,
+        asignado: document.getElementById('asignado').value,
+        tipoServicio: document.getElementById('tipoServicio').value,
+        observaciones: document.getElementById('observaciones').value
+      };
+
+      console.log("Datos enviados a la base de datos:", datos);
+      alert("Datos guardados correctamente.");
+      folioContador++;
+    }
+
+    function copiarComoImagen() {
+      alert("Función de copiar como imagen aún no implementada.");
+    }
+
+    function cerrarTurno() {
+      document.getElementById('formulario').classList.add('hidden');
+      document.getElementById('despedida').classList.remove('hidden');
     }
   </script>
 
