--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <!-- Script -->
   <script>
     let nombreUsuario = "";
-    const scriptURL =const scriptURL = "https://script.google.com/macros/s/AKfycbwnsXwA4i_yKxPFVq6M9bBBP_bArfRhILrQOD4qMErzov3WFg7oeeOOEKiVH7nf_1yrYg/exec" ; // Reemplaza con tu URL
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwnsXwA4i_yKxPFVq6M9bBBP_bArfRhILrQOD4qMErzov3WFg7oeeOOEKiVH7nf_1yrYg/exec" ; // Reemplaza con tu URL
 
     async function generarFolioDesdeSheets() {
       try {
