--- a/index.html
+++ b/index.html
@@ -2,97 +2,207 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Registro de Servicio</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro Institucional</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 0;
+      padding: 0;
+      background-color: #005fa3;
     }
-    #formulario {
-      border: 1px solid #ccc;
+
+    .seccion {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
       padding: 20px;
-      max-width: 600px;
+      text-align: center;
+      background-image: url('marca-agua.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 300px;
+      background-blend-mode: lighten;
+      background-color: #005fa3;
     }
-    input, select, textarea {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 8px;
+
+    .hidden {
+      display: none;
+    }
+
+    input, select, textarea, button {
+      margin: 10px 0;
+      padding: 10px;
+      width: 90%;
+      max-width: 500px;
+      font-size: 16px;
       box-sizing: border-box;
     }
+
+    textarea {
+      height: 120px;
+      resize: vertical;
+    }
+
     button {
-      padding: 10px 20px;
-      margin-right: 10px;
+      background-color: #ffffff;
+      color: #005fa3;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #e0e0e0;
+    }
+
+    h1, h2, p, label {
+      color: white;
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 20px;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
 
-  <h2>Registro de Servicio</h2>
-
-  <div id="formulario">
-    <label>Folio:</label>
-    <input type="text" id="folio" readonly>
-
-    <label>Fecha:</label>
-    <input type="date" id="fecha">
-
-    <label>Hora:</label>
-    <input type="time" id="hora">
-
-    <label>Telefonista:</label>
-    <input type="text" id="telefonista" readonly>
-
-    <label>Dirección:</label>
-    <input type="text" id="direccion">
-
-    <label>Destino:</label>
-    <input type="text" id="destino">
-
-    <label>Asignado:</label>
-    <input type="text" id="asignado">
-
-    <label>Tipo de Servicio:</label>
-    <select id="tipoServicio">
-      <option value="">Selecciona</option>
-      <option value="Urgente">Urgente</option>
-      <option value="Programado">Programado</option>
-      <option value="Traslado">Traslado</option>
-    </select>
-
-    <label>Observaciones:</label>
-    <textarea id="observaciones" rows="3"></textarea>
-
-    <button onclick="copiarComoImagen()">Continuar</button>
+  <!-- Carátula -->
+  <div id="caratula" class="seccion">
+    <img src="LOGO-INSTITUCIONAL.png" alt="Logo" class="logo">
+    <h1>Inicio de Jornada</h1>
+    <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
+    <button onclick="iniciarJornada()">Continuar</button>
   </div>
 
+  <!-- Bienvenida -->
+  <div id="bienvenida" class="seccion hidden">
+    <h2 id="mensajeBienvenida"></h2>
+  </div>
+
+  <!-- Formulario -->
+  <div id="formulario" class="seccion hidden">
+    <h2>Registro de Servicio</h2>
+    <input type="text" id="folio" readonly>
+    <input type="date" id="fecha">
+    <input type="time" id="hora">
+    <input type="text" id="telefonista" readonly>
+    <input type="text" id="direccion" placeholder="Dirección del servicio">
+    <input type="text" id="destino" placeholder="Destino">
+    <input type="text" id="asignado" placeholder="Asignado a">
+    <select id="tipoServicio">
+      <option value="">Selecciona tipo de servicio</option>
+      <option value="Normal">Normal</option>
+      <option value="Por tiempo">Por tiempo</option>
+      <option value="Carro rotulado">Carro rotulado</option>
+      <option value="Mensajería">Mensajería</option>
+      <option value="Paquetería">Paquetería</option>
+      <option value="Mensajería compras">Mensajería compras</option>
+      <option value="Carro sin rotular">Carro sin rotular</option>
+      <option value="2 carros">2 carros</option>
+      <option value="Guía">Guía</option>
+      <option value="Cambio de llanta">Cambio de llanta</option>
+      <option value="Pasar corriente">Pasar corriente</option>
+      <option value="Transporte de mascota">Transporte de mascota</option>
+    </select>
+    <textarea id="observaciones" placeholder="Observaciones"></textarea>
+    <button onclick="guardarDatos()">Guardar</button>
+    <button onclick="copiarComoImagen()">Copiar como imagen</button>
+    <button onclick="cerrarTurno()">Cerrar turno</button>
+  </div>
+
+  <!-- Despedida -->
+  <div id="despedida" class="seccion hidden">
+    <h2>¡Gracias por tu servicio hoy!</h2>
+    <p>Tu jornada ha sido registrada correctamente.</p>
+  </div>
+
+  <!-- Script -->
   <script>
-    const nombreUsuario = "Jesús Sánchez";
+    let nombreUsuario = "";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwnsXwA4i_yKxPFVq6M9bBBP_bArfRhILrQOD4qMErzov3WFg7oeeOOEKiVH7nf_1yrYg/exec";
 
     async function generarFolioDesdeSheets() {
       try {
-        const response = await fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec");
-        const data = await response.json();
-        return data.folio || "Error";
+        const res = await fetch(scriptURL);
+        const folio = await res.text();
+        return folio;
       } catch (error) {
         console.error("Error al generar folio:", error);
         return "Error";
       }
     }
 
-    async function limpiarFormulario() {
-      document.getElementById('direccion').value = "";
-      document.getElementById('destino').value = "";
-      document.getElementById('asignado').value = "";
-      document.getElementById('tipoServicio').value = "";
-      document.getElementById('observaciones').value = "";
+    async function iniciarJornada() {
+      const nombre = document.getElementById('nombreUsuario').value.trim();
+      if (nombre === "") {
+        alert("Por favor ingresa tu nombre.");
+        return;
+      }
 
-      const folio = await generarFolioDesdeSheets();
-      if (folio !== "Error") {
+      nombreUsuario = nombre;
+      document.getElementById('caratula').classList.add('hidden');
+      document.getElementById('mensajeBienvenida').textContent = `${nombreUsuario}, gracias por tu compromiso. ¡Vamos a dar lo mejor hoy!`;
+      document.getElementById('bienvenida').classList.remove('hidden');
+
+      setTimeout(async () => {
+        document.getElementById('bienvenida').classList.add('hidden');
+        document.getElementById('formulario').classList.remove('hidden');
+
+        const folio = await generarFolioDesdeSheets();
         document.getElementById('folio').value = folio;
         document.getElementById('fecha').valueAsDate = new Date();
         document.getElementById('hora').value = new Date().toTimeString().slice(0,5);
         document.getElementById('telefonista').value = nombreUsuario;
+      }, 4000);
+    }
+
+    async function guardarDatos() {
+      const campos = [
+        { id: 'direccion', nombre: 'Dirección' },
+        { id: 'destino', nombre: 'Destino' },
+        { id: 'asignado', nombre: 'Asignado a' },
+        { id: 'tipoServicio', nombre: 'Tipo de servicio' }
+      ];
+
+      let faltantes = campos.filter(c => document.getElementById(c.id).value.trim() === "");
+
+      if (faltantes.length > 0) {
+        alert("Faltan campos obligatorios:\n" + faltantes.map(f => `- ${f.nombre}`).join("\n"));
+        return;
+      }
+
+      const datos = {
+        folio: document.getElementById('folio').value,
+        fecha: document.getElementById('fecha').value,
+        hora: document.getElementById('hora').value,
+        telefonista: document.getElementById('telefonista').value,
+        direccion: document.getElementById('direccion').value,
+        destino: document.getElementById('destino').value,
+        asignado: document.getElementById('asignado').value,
+        tipoServicio: document.getElementById('tipoServicio').value,
+        observaciones: document.getElementById('observaciones').value
+      };
+
+      try {
+        const res = await fetch(scriptURL, {
+          method: "POST",
+          body: JSON.stringify(datos),
+          headers: { "Content-Type": "application/json" }
+        });
+        const result = await res.text();
+        if (result === "OK") {
+          alert("Datos guardados correctamente.");
+        } else {
+          alert("Error al guardar datos.");
+        }
+      } catch (error) {
+        console.error("Error al guardar:", error);
+        alert("Error de conexión.");
       }
     }
 
@@ -107,19 +217,16 @@
             if (enviar) {
               alert("Abre Telegram y pega tu captura.");
             }
-            limpiarFormulario();
+            limpiarFormulario(); // Limpia después de copiar
           }).catch(err => {
             console.error("Error al copiar imagen:", err);
             alert("No se pudo copiar la imagen.");
-            limpiarFormulario();
+            limpiarFormulario(); // También limpia si falla
           });
         });
       });
     }
 
-    // Inicializa el formulario al cargar
-    window.onload = limpiarFormulario;
-  </script>
-
-</body>
-</html>
+    async function limpiarFormulario() {
+      document.getElementById('direccion').value = "";
+      document.getElementById('destino').value =
