--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <meta charset="UTF-8">
   <title>Captura Institucional</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; }
+    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; background-color: #f4f4f4; }
     h2 { color: #2c3e50; }
     label { display: block; margin-top: 10px; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; }
-    button { margin-top: 15px; padding: 10px 20px; background-color: #2980b9; color: white; border: none; cursor: pointer; }
+    input, select, textarea {
+      width: 100%; padding: 8px; margin-top: 5px;
+      border: 1px solid #ccc; border-radius: 4px;
+    }
+    button {
+      margin-top: 15px; padding: 10px 20px;
+      background-color: #2980b9; color: white;
+      border: none; cursor: pointer; border-radius: 4px;
+    }
     button:hover { background-color: #3498db; }
-    .seccion { margin-bottom: 30px; border-bottom: 1px solid #ccc; padding-bottom: 20px; }
+    .seccion {
+      margin-bottom: 30px; border-bottom: 1px solid #ccc; padding-bottom: 20px;
+      background-color: white; padding: 20px; border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -37,6 +47,9 @@
 
   <h2>Captura de Servicios</h2>
   <div class="seccion">
+    <label>Folio:</label>
+    <input type="text" id="folio" readonly>
+
     <label>Fecha:</label>
     <input type="date" id="fecha">
 
@@ -44,7 +57,7 @@
     <input type="time" id="hora">
 
     <label>Telefonista:</label>
-    <input type="text" id="telefonista">
+    <input type="text" id="telefonista" readonly>
 
     <label>Domicilio:</label>
     <input type="text" id="domicilio">
@@ -57,10 +70,19 @@
 
     <label>Tipo de Servicio:</label>
     <select id="tipoServicio">
-      <option value="Traslado">Traslado</option>
-      <option value="Emergencia">Emergencia</option>
-      <option value="Consulta">Consulta</option>
-      <option value="Otro">Otro</option>
+      <option value="">Selecciona</option>
+      <option value="Normal">Normal</option>
+      <option value="Por tiempo">Por tiempo</option>
+      <option value="Carro rotulado">Carro rotulado</option>
+      <option value="Mensajería">Mensajería</option>
+      <option value="Paquetería">Paquetería</option>
+      <option value="Mensajería compras">Mensajería compras</option>
+      <option value="Carro sin rotular">Carro sin rotular</option>
+      <option value="2 carros">2 carros</option>
+      <option value="Guía">Guía</option>
+      <option value="Cambio de llanta">Cambio de llanta</option>
+      <option value="Pasar corriente">Pasar corriente</option>
+      <option value="Transporte de mascota">Transporte de mascota</option>
     </select>
 
     <label>Observaciones:</label>
@@ -72,7 +94,18 @@
   <script>
     const endpoint = "https://script.google.com/macros/s/AKfycbw5EJwqYdBnp1GL_6bTUIY_635i43PF43zf4c8ohZl8UBEH8ZYhGdfWo2mX2hN4BYvzdw/exec";
 
-    function enviarAsistencia() {
+    async function generarFolio() {
+      try {
+        const res = await fetch(endpoint + "?tipo=folio");
+        const data = await res.json();
+        return data.folio || "Error";
+      } catch (error) {
+        console.error("Error al generar folio:", error);
+        return "Error";
+      }
+    }
+
+    async function enviarAsistencia() {
       const datos = {
         tipo: "asistencia",
         nombre: document.getElementById("nombre").value,
@@ -92,9 +125,10 @@
       .catch(err => alert("Error: " + err));
     }
 
-    function enviarServicio() {
+    async function enviarServicio() {
       const datos = {
         tipo: "servicio",
+        folio: document.getElementById("folio").value,
         fecha: document.getElementById("fecha").value,
         hora: document.getElementById("hora").value,
         telefonista: document.getElementById("telefonista").value,
@@ -114,6 +148,16 @@
       .then(msg => alert(msg))
       .catch(err => alert("Error: " + err));
     }
+
+    window.onload = async () => {
+      const folio = await generarFolio();
+      if (folio !== "Error") {
+        document.getElementById("folio").value = folio;
+        document.getElementById("telefonista").value = "Jesús Sánchez";
+        document.getElementById("fecha").valueAsDate = new Date();
+        document.getElementById("hora").value = new Date().toTimeString().slice(0,5);
+      }
+    };
   </script>
 
 </body>
